# django-ga-measurement-protocol

./: .gitignore  README.md  pytest.ini  setup.cfg  tox.ini
.github/: CODEOWNERS
.github/workflows/: workflow.yml
django_ga_measurement_protocol/: middleware.py  track.py
django_ga_measurement_protocol/tests/: settings.py  test_middleware.py  test_tracking.py  urls.py
django_ga_measurement_protocol/tests/testapp/: urls.py  views.py
