[metadata]
name = django-ga-measurement-protocol
version = 0.2.0
description = A Django app to provide Google Analytics measurement protocol integration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uktrade/django-ga-measurement-protocol
author = Kevin Carrogan
author_email = kevin.carrogan@digital.trade.gov.uk
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.2
    requests >= 2
    scrubadub ~= 1.2.2
    django-ipware ~= 3.0.7

[options.extras_require]
dev =
    black
    pre-commit
    pytest
    pytest-django
    pytest-pythonpath
    requests_mock
    tox
